# orbi

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .justfile  BUILD.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: clang-x86_64.toolchain.cmake  common.cmake  mingw64-x86_64.toolchain.cmake  pedantic.cmake  x86_64-linux-llvm.toolchain.cmake  x86_64-windows-llvm.toolchain.cmake
example/cube/: CMakeLists.txt
example/cube/src/: main.cpp
example/triangle/: CMakeLists.txt
example/triangle/res/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
example/triangle/src/: main.cpp
orbi/: CMakeLists.txt
orbi/include/orbi/: context.hpp  ctx.hpp  device.hpp  exception.hpp  export.hpp  pimpl.hpp  semver.hpp  util.hpp  version.hpp  window.hpp
orbi/include/orbi/detail/: impl.hpp  pimpl.hpp  util.hpp
orbi/src/: context.cpp  ctx.cpp  device.cpp  semver.cpp  util.cpp  window.cpp
test/: CMakeLists.txt
test/orbi/: context.test.cpp  ctx.test.cpp  semver.test.cpp  window.test.cpp
